# 2025-Summer-Thursday-uv

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_simple_excel.py
